# tree-sitter-scribl

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pnpm-lock.yaml  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-tree-sitter-scribl.pc.in
bindings/c/tree_sitter/: tree-sitter-tree-sitter-scribl.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_tree_sitter_scribl/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterTreeSitterScribl/: tree_sitter_scribl.h
bindings/swift/TreeSitterTreeSitterScriblTests/: TreeSitterTreeSitterScriblTests.swift
src/: grammar.json  node-types.json  parser.c
test/corpus/: assignment_expressions.txt  binary_expressions.txt  comments.txt  complex_expressions.txt  edge_cases.txt  parenthesized_expressions.txt  primary_expressions.txt  source_file.txt  unary_expressions.txt
